--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "express": "4.17.1",
+    "pg": "^7.18.2",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.5",
     "ts-node": "8.8.1",
     "typescript": "3.8.3"
   },
@@ -14,5 +17,11 @@
     "build": "tsc -p ."
   },
   "author": "Eduard Oancea",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/bluebird": "^3.5.30",
+    "@types/node": "^12.12.31",
+    "@types/validator": "^12.0.1",
+    "sequelize-cli": "^5.5.1"
+  }
 }
