--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,11 @@
   "description": "Assignment1 REST API",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "4.0.1",
     "express": "4.17.1",
     "pg": "^7.18.2",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.5",
+    "pg-hstore": "2.3.3",
+    "sequelize": "5.21.5",
     "ts-node": "8.8.1",
     "typescript": "3.8.3"
   },
@@ -19,9 +20,10 @@
   "author": "Eduard Oancea",
   "license": "ISC",
   "devDependencies": {
-    "@types/bluebird": "^3.5.30",
-    "@types/node": "^12.12.31",
-    "@types/validator": "^12.0.1",
-    "sequelize-cli": "^5.5.1"
+    "@types/bcrypt": "3.0.0",
+    "@types/bluebird": "3.5.30",
+    "@types/node": "12.12.31",
+    "@types/validator": "12.0.1",
+    "sequelize-cli": "15.5.1"
   }
 }
