--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "bcrypt": "4.0.1",
+    "bottlejs": "1.7.2",
     "express": "4.17.1",
-    "pg": "^7.18.2",
+    "pg": "7.18.2",
     "pg-hstore": "2.3.3",
     "sequelize": "5.21.5",
     "ts-node": "8.8.1",
