--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,6 @@
     "@types/bcrypt": "3.0.0",
     "@types/bluebird": "3.5.30",
     "@types/node": "12.12.31",
-    "@types/validator": "12.0.1",
-    "sequelize-cli": "15.5.1"
+    "@types/validator": "12.0.1"
   }
 }
