--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,7 +4,9 @@
     "target": "es6",
     "module": "commonjs",
     "outDir": "./dist",
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": [
     "src/**/*.ts"
