--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bcrypt": "4.0.1",
     "bottlejs": "1.7.2",
+    "dotenv": "8.2.0",
     "express": "4.17.1",
     "jsonwebtoken": "8.5.1",
     "pg": "7.18.2",
