--- a/front/package.json
+++ b/front/package.json
@@ -3,13 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "4.9.8",
+    "@material-ui/icons": "4.9.1",
     "@types/node": "12.12.30",
     "@types/react": "16.9.25",
     "@types/react-dom": "16.9.5",
+    "@types/react-router-dom": "5.1.3",
+    "final-form": "4.19.0",
+    "history": "4.10.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-final-form": "6.4.0",
+    "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
-    "typescript": "3.7.5"
+    "styled-components": "5.0.1",
+    "typescript": "3.7.5",
+    "yup": "0.28.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.0.1"
   }
 }
