--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "@types/react": "16.9.25",
     "@types/react-dom": "16.9.5",
     "@types/react-router-dom": "5.1.3",
+    "@types/yup": "^0.26.34",
     "final-form": "4.19.0",
     "history": "4.10.1",
     "react": "16.13.1",
