--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -18,7 +18,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "noImplicitAny": false
+    "noImplicitAny": true,
+    "strictNullChecks": false
   },
   "include": [
     "src"
