--- a/front/package.json
+++ b/front/package.json
@@ -5,11 +5,6 @@
   "dependencies": {
     "@material-ui/core": "4.9.8",
     "@material-ui/icons": "4.9.1",
-    "@types/node": "12.12.30",
-    "@types/react": "16.9.25",
-    "@types/react-dom": "16.9.5",
-    "@types/react-router-dom": "5.1.3",
-    "@types/yup": "^0.26.34",
     "final-form": "4.19.0",
     "history": "4.10.1",
     "react": "16.13.1",
@@ -43,6 +38,12 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.0.1"
+    "@types/styled-components": "5.0.1",
+    "@types/history": "4.7.5",
+    "@types/node": "12.12.30",
+    "@types/react": "16.9.25",
+    "@types/react-dom": "16.9.5",
+    "@types/react-router-dom": "5.1.3",
+    "@types/yup": "0.26.34"
   }
 }
