--- a/front/package.json
+++ b/front/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "4.9.8",
     "@material-ui/icons": "4.9.1",
+    "dayjs": "^1.8.23",
     "final-form": "4.19.0",
     "history": "4.10.1",
     "react": "16.13.1",
