--- a/front/package.json
+++ b/front/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/dayjs": "1.3.13",
     "@material-ui/core": "4.9.8",
     "@material-ui/icons": "4.9.1",
-    "dayjs": "^1.8.23",
+    "@material-ui/pickers": "3.2.10",
+    "dayjs": "1.8.23",
     "final-form": "4.19.0",
     "history": "4.10.1",
     "react": "16.13.1",
