--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,9 @@
   "description": "Assignment1 REST API",
   "main": "index.js",
   "dependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.4",
+    "@types/jsonwebtoken": "^8.3.8",
     "bcrypt": "4.0.1",
     "bottlejs": "1.7.2",
     "cors": "^2.8.5",
