--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "4.0.1",
     "bottlejs": "1.7.2",
     "cors": "^2.8.5",
+    "dayjs": "1.8.24",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "jsonwebtoken": "8.5.1",
