Add part of the notifications logic.

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,5 +1,11 @@
-SECRET_KEY=
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
+SECRET_KEY
+
+DB_NAME_TEST
+DB_USER_TEST=
+DB_PASSWORD_TEST=
+DB_HOST_TEST=
+
+DB_NAME_DEVELOPMENT=
+DB_USER_DEVELOPMENT=
+DB_PASSWORD_DEVELOPMENT=
+DB_HOST_DEVELOPMENT=
