--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,12 @@
   "description": "Assignment1 REST API",
   "main": "index.js",
   "dependencies": {
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.4",
-    "@types/jsonwebtoken": "^8.3.8",
+    "@types/cors": "2.8.6",
+    "@types/express": "4.17.4",
+    "@types/jsonwebtoken": "8.3.8",
     "bcrypt": "4.0.1",
     "bottlejs": "1.7.2",
-    "cors": "^2.8.5",
+    "cors": "2.8.5",
     "dayjs": "1.8.24",
     "dotenv": "8.2.0",
     "express": "4.17.1",
@@ -17,6 +17,7 @@
     "pg": "7.18.2",
     "pg-hstore": "2.3.3",
     "sequelize": "5.21.5",
+    "socket.io": "2.3.0",
     "ts-node": "8.8.1",
     "typescript": "3.8.3"
   },
@@ -35,10 +36,11 @@
     "@types/bcrypt": "3.0.0",
     "@types/bluebird": "3.5.30",
     "@types/node": "12.12.31",
+    "@types/socket.io": "2.1.4",
     "@types/validator": "12.0.1",
     "cross-env": "7.0.2",
     "jest": "25.2.4",
-    "sequelize-cli": "^5.5.1",
+    "sequelize-cli": "5.5.1",
     "supertest": "4.0.2",
     "ts-jest": "25.3.0"
   },
