--- a/front/package.json
+++ b/front/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "4.9.8",
     "@material-ui/icons": "4.9.1",
     "@material-ui/pickers": "3.2.10",
+    "@types/socket.io-client": "1.4.32",
     "dayjs": "1.8.23",
     "final-form": "4.19.0",
     "history": "4.10.1",
@@ -15,6 +16,7 @@
     "react-final-form": "6.4.0",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
+    "socket.io-client": " 2.3.0",
     "styled-components": "5.0.1",
     "typescript": "3.7.5",
     "yup": "0.28.3"
