--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,8 +6,7 @@
     "outDir": "./dist",
     "baseUrl": "./src",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "noImplicitAny": true
+    "emitDecoratorMetadata": true
   },
   "include": [
     "src/**/*.ts"
